# ChangeLog for www-servers/nginx
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-servers/nginx/ChangeLog,v 1.312 2012/03/30 06:35:42 patrick Exp $

  30 Mar 2012; Patrick Lauer <patrick@gentoo.org> nginx-1.1.17.ebuild:
  Bump upload_progress module #409099

  15 Mar 2012; Agostino Sarubbo <ago@gentoo.org> nginx-1.0.14.ebuild:
  Stable for AMD64/X86, wrt security bug #408367

  15 Mar 2012; Patrick Lauer <patrick@gentoo.org> -nginx-1.0.11.ebuild,
  -nginx-1.0.12.ebuild, -nginx-1.1.14.ebuild, -nginx-1.1.16.ebuild:
  Removing old versions

*nginx-1.1.17 (15 Mar 2012)
*nginx-1.0.14 (15 Mar 2012)

  15 Mar 2012; Patrick Lauer <patrick@gentoo.org> +nginx-1.0.14.ebuild,
  +nginx-1.1.17.ebuild:
  Bump for #408367

  02 Mar 2012; Patrick Lauer <patrick@gentoo.org> nginx-1.1.16.ebuild:
  Fixing headers_more URI madness #406555

*nginx-1.1.16 (02 Mar 2012)

  02 Mar 2012; Patrick Lauer <patrick@gentoo.org> +nginx-1.1.16.ebuild,
  -nginx-1.1.13.ebuild:
  Bump, closes #403329

*nginx-1.1.14 (11 Feb 2012)
*nginx-1.0.12 (11 Feb 2012)

  11 Feb 2012; Benedikt Böhm <hollow@gentoo.org> nginx-1.0.10.ebuild,
  nginx-1.0.11.ebuild, +nginx-1.0.12.ebuild, -nginx-1.1.12-r1.ebuild,
  nginx-1.1.13.ebuild, +nginx-1.1.14.ebuild, +files/nginx.conf,
  +files/nginx.initd, -files/nginx.conf-r4, -files/nginx.init-r2:
  version bump wrt #402957

*nginx-1.1.13 (29 Jan 2012)
*nginx-1.0.11 (29 Jan 2012)

  29 Jan 2012; Benedikt Böhm <hollow@gentoo.org> +nginx-1.0.11.ebuild,
  -nginx-1.1.8.ebuild, +nginx-1.1.13.ebuild:
  version bump wrt #401163

  28 Dec 2011; Patrick Lauer <patrick@gentoo.org> -nginx-1.1.11.ebuild,
  -nginx-1.1.12.ebuild:
  Removing old

*nginx-1.1.12-r1 (28 Dec 2011)

  28 Dec 2011; Patrick Lauer <patrick@gentoo.org> +nginx-1.1.12-r1.ebuild,
  metadata.xml, nginx-1.1.12.ebuild:
  Add pcre-jit support

*nginx-1.1.12 (27 Dec 2011)

  27 Dec 2011; Patrick Lauer <patrick@gentoo.org> +nginx-1.1.12.ebuild:
  Bump
