@@ -4,6 +4,7 @@ AUX nginx.logrotate 364 RMD160 9fdfd2ea2f49b8dba20a030d893e34779bb32364 SHA1 4ab
 DIST nginx-1.0.10.tar.gz 686011 RMD160 875082ff6e9197cc26adf4ee51eeda34b9531e29 SHA1 01304d44048aa57944e935dda8523afd5e5d1e23 SHA256 7221fdb0f2a94875252cb3c406a2cd5895d9bc57874fc1b4f588964fd3361e3c
 DIST nginx-1.0.14.tar.gz 692465 RMD160 e6f59ad9126467ef4a2ae580c8976b48840aba90 SHA1 f74cbda4f726327841abe06676c6034198427ce9 SHA256 98e483925dab83683762db32c21a1e2ec685d79a298c2e32e785af0cc4bae3af
 DIST nginx-1.1.17.tar.gz 712619 RMD160 efcee5cb1e4f8a6f9ccb1152e97f18dd1c37ec53 SHA1 60c02ddc7e742d8aa959531f5a63684380e798e8 SHA256 bcca95b2c5ad56c07940c5afc5848c10089ca5e1d79a3ebf23fa408996aba28a
+DIST nginx-1.1.18.tar.gz 714741 RMD160 76fe07843b3477c65ba3511206a95329231f72b9 SHA1 084e38afcf3b0ca2e9982ae0f4c4ffcf028be2d3 SHA256 bf040821f3ffa3c733e14894b427eed119316561ab6617e5f0b13aa6353aa3ae
 DIST nginx_http_push_module-0.692.tar.gz 29119 RMD160 9d2be16074cf28115af0f1d8f3646937cda649ad SHA1 72103084cad8f4d3d9a49a6b04cf780e4541605d SHA256 64868708071aa21dbc4c7a07d149dd6ec9108fb7eaf2aad5ad069406151f17fe
 DIST nginx_upload_module-2.2.0.tar.gz 25796 RMD160 5734af837be3fe8ec444a7e5e7f6707118594098 SHA1 93d6e83e613a0ce2ed057a434b344fa1b6609b47 SHA256 b1c26abe0427180602e257627b4ed21848c93cc20cefc33af084983767d65805
 DIST ngx_cache_purge-1.4.tar.gz 6899 RMD160 b851f9d7c829152a6675d7e83df372e4bd894170 SHA1 35c45729183daa66b60741828a42492e06597da3 SHA256 4764e3d565445644f4a6b183cb9e987fce535396b00d68dc923bb35731a88886
@@ -16,5 +17,6 @@ DIST ngx_upload_progress-0.8.4.tar.gz 16645 RMD160 ad8f40bc75bc060eda9df3a611609
 EBUILD nginx-1.0.10.ebuild 11064 RMD160 911919138c01903776c6b2a599cf8c573ca4e3b5 SHA1 d19bd5d607483fcf7763e58cbeaef6a6757f99ea SHA256 b17684768ffc8b0d4c4040a8c4a522612ec0c66b2deac9420dc98c3379710f93
 EBUILD nginx-1.0.14.ebuild 11061 RMD160 194f6337b03a74e4f732f7d57052bd8e99e1d74b SHA1 8ed4e73b6f4a717b6f4ba1417c0de2d6917a6282 SHA256 6464288fe11e699e4c85b51b42123318d424d6f1074d7fb55fd2ed0b78f52bc1
 EBUILD nginx-1.1.17.ebuild 11155 RMD160 100f8ebf34d070946a1f77f4022c03847f71babb SHA1 c12519528d16887e5832bb1f2502a36bc9a59dff SHA256 d96de94552f11311395c9788d1de826612b301b948d610c7af61f604e6107362
-MISC ChangeLog 51163 RMD160 9b7bc7eb6d02eded7560500023c48ee62bc6fe7e SHA1 afaf792da06fa9050026e5fe1c6ce4971164dc63 SHA256 62e5047b0d8180882987dcab3d6ad494e3a956b3b5a6d21b377da28759eec207
+EBUILD nginx-1.1.18.ebuild 11155 RMD160 4f5ceb030261c57876b24182fe7d9553eb852275 SHA1 b63d8216cbb89a4c30f1c0f10df0f1193f08e3a0 SHA256 4d77670ff3ff160a348cae04644b55fe189616c96c23a99756e02f0666de1603
+MISC ChangeLog 51272 RMD160 746f2dc0539626f442548bd30f904393ffef10d0 SHA1 5a3dc5304ee17c807db30330d7dcd4357d314086 SHA256 a7277b405d3cab10137d9459357933875be506d011ca6c5c47e94ece13c6f81f
 MISC metadata.xml 2465 RMD160 0997961bf70f680aedae4dbca6d77fbc4ef0a8d3 SHA1 f3722efd8f9faea7aaa16cba3ee8a5e195845aca SHA256 803c729fd73dee3a1db72b9130c44d4fed071480206180b2f01e420a03ce0fa8
