@@ -1,6 +1,11 @@
 # ChangeLog for www-servers/nginx
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-servers/nginx/ChangeLog,v 1.312 2012/03/30 06:35:42 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-servers/nginx/ChangeLog,v 1.313 2012/04/10 04:04:21 patrick Exp $
+
+*nginx-1.1.18 (10 Apr 2012)
+
+  10 Apr 2012; Patrick Lauer <patrick@gentoo.org> +nginx-1.1.18.ebuild:
+  Bump
 
   30 Mar 2012; Patrick Lauer <patrick@gentoo.org> nginx-1.1.17.ebuild:
   Bump upload_progress module #409099
